# ChangeLog for net-libs/libnfnetlink
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/ChangeLog,v 1.50 2012/10/08 22:55:05 radhermit Exp $

*libnfnetlink-1.0.1 (08 Oct 2012)

  08 Oct 2012; Tim Harder <radhermit@gentoo.org> +libnfnetlink-1.0.1.ebuild:
  Version bump.

  02 Sep 2012; Raúl Porcel <armin76@gentoo.org> libnfnetlink-1.0.0-r1.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #419269

  11 Aug 2012; Markus Meier <maekke@gentoo.org> libnfnetlink-1.0.0-r1.ebuild:
  x86 stable, bug #419269

  07 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  libnfnetlink-1.0.0-r1.ebuild:
  Stable arm, bug #419269

  06 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  libnfnetlink-1.0.0-r1.ebuild:
  Stable ppc ppc64, bug #419269

  03 Aug 2012; Markos Chandras <hwoarang@gentoo.org>
  libnfnetlink-1.0.0-r1.ebuild:
  Stable on amd64 wrt bug #419269

  01 Aug 2012; Jeroen Roovers <jer@gentoo.org> libnfnetlink-1.0.0-r1.ebuild:
  Stable for HPPA (bug #419269).

*libnfnetlink-1.0.0-r1 (14 Feb 2012)

  14 Feb 2012; Jeroen Roovers <jer@gentoo.org> -libnfnetlink-0.0.25.ebuild,
  -libnfnetlink-0.0.30.ebuild, -libnfnetlink-0.0.33.ebuild,
  -libnfnetlink-0.0.38.ebuild, -libnfnetlink-0.0.39.ebuild,
  -libnfnetlink-0.0.40.ebuild, -libnfnetlink-0.0.41.ebuild,
  +libnfnetlink-1.0.0-r1.ebuild:
  Clean up old. Add IUSE=static-libs.

  28 Aug 2011; Raúl Porcel <armin76@gentoo.org> libnfnetlink-1.0.0.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #376881

  13 Aug 2011; Markus Meier <maekke@gentoo.org> libnfnetlink-1.0.0.ebuild:
  arm stable, bug #376881

  01 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org>
  libnfnetlink-1.0.0.ebuild:
  ppc/ppc64 wrt #376881

  20 Mar 2011; Raúl Porcel <armin76@gentoo.org> libnfnetlink-1.0.0.ebuild:
  Add ~alpha/~m68k/~s390/~sh wrt #354309

  13 Mar 2011; Markus Meier <maekke@gentoo.org> libnfnetlink-1.0.0.ebuild:
  add ~arm, bug #354309
