@@ -1,42 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/libnfnetlink-1.0.0.ebuild,v 1.15 2011/08/28 15:54:58 armin76 Exp $
-
-inherit linux-info
-
-DESCRIPTION="the low-level library for netfilter related kernel/userspace communication"
-HOMEPAGE="http://www.netfilter.org/projects/libnfnetlink/"
-SRC_URI="http://www.netfilter.org/projects/${PN}/files/${P}.tar.bz2"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86"
-IUSE=""
-
-DEPEND=""
-RDEPEND=""
-
-pkg_setup() {
-	linux-info_pkg_setup
-
-	if kernel_is lt 2 6 18 ; then
-		die "${PN} requires at least 2.6.18 kernel version"
-	fi
-
-	#netfilter core team has changed some option names with kernel 2.6.20
-	error_common=' is not set when it should be. You can activate it in the Core Netfilter Configuration'
-	if kernel_is lt 2 6 20 ; then
-		CONFIG_CHECK="~IP_NF_CONNTRACK_NETLINK"
-		ERROR_IP_NF_CONNTRACK_NETLINK="CONFIG_IP_NF_CONNTRACK_NETLINK:\t${error_common}"
-	else
-		CONFIG_CHECK="~NF_CT_NETLINK"
-		ERROR_NF_CT_NETLINK="CONFIG_NF_CT_NETLINK:\t${error_common}"
-	fi
-
-	check_extra_config
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed"
-	dodoc README
-}
