@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libnfnetlink
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/ChangeLog,v 1.50 2012/10/08 22:55:05 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/ChangeLog,v 1.51 2012/10/08 22:56:40 radhermit Exp $
+
+  08 Oct 2012; Tim Harder <radhermit@gentoo.org> -libnfnetlink-1.0.0.ebuild:
+  Remove old.
 
 *libnfnetlink-1.0.1 (08 Oct 2012)
 
